<resources>
    <string name="app_name">Filmy Fuche</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_image_browser">ImageBrowserActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="home">Home</string>
    <string name="newsGossips">News &amp; Gossips</string>
    <string name="newReleases">New Release</string>
    <string name="upcomingMovies">Upcoming Movies</string>
    <string name="allMovies">All Movies</string>
    <string name="boxOffice">Box office Collection</string>
    <string name="trendingVideos">Trending Videos</string>
    <string name="watchFullMovies">Watch Full Movies</string>
    <string name="moviesReviews">Movie Reviews</string>
    <string name="showtimes">Show Times</string>
    <string name="photoGallery">Photo Gallery</string>
    <string name="movies">Movies</string>
    <string name="poll">Polls</string>
    <string name="trivia">Trivia</string>
    <string name="filmyTrivias">Filmy Trivias</string>
    <string name="filmyFuchePoll">Filmy Fuche Polls</string>
    <string name="FilmyTrolls">Filmy Trolls</string>
    <string name="troll">Trolls</string>
    <string name="settings">Settings</string>
    <string name="contactUs">Contact Us</string>
    <string name="PREF_TOKEN">Pref Token</string>
    <string name="notification_channel_id">notification-channel</string>
    <string name="notification_channel_name">Notifcations</string>
    <string name="notification_channel_desc">Display notifications for FilmyFuchhe</string>

</resources>
