<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuHome"
            android:title="@string/home" />
        <item
            android:id="@+id/menuNewsGossips"
            android:title="@string/newsGossips" />
        <item
            android:id="@+id/menuNewRelease"
            android:title="@string/newReleases" />
        <item
            android:id="@+id/menuUpComing"
            android:title="@string/upcomingMovies" />
        <item
            android:id="@+id/menuBoxOffice"
            android:title="@string/boxOffice" />
        <item
            android:id="@+id/menuTrending"
            android:title="@string/trendingVideos" />
        <item
            android:id="@+id/menuWatchFull"
            android:title="@string/watchFullMovies" />
        <item
            android:id="@+id/menMovieReviews"
            android:title="@string/moviesReviews" />
        <item
            android:id="@+id/menuPhotoGallery"
            android:title="@string/photoGallery" />
        <item
            android:id="@+id/menuFilmyTrivias"
            android:title="@string/filmyTrivias" />
        <item
            android:id="@+id/menuFuchePoll"
            android:title="@string/filmyFuchePoll" />
        <item
            android:id="@+id/menuFilmyTroll"
            android:title="@string/FilmyTrolls" />
        <item
            android:id="@+id/menuSettings"
            android:title="@string/settings" />
        <item
            android:id="@+id/menuContact"
            android:title="@string/contactUs" />

    </group>
</menu>
